@@ -8,11 +8,13 @@ plymouth (0.9.4-2) UNRELEASED; urgency=medium
   * debian/plymouth.postinst: Remove old cleanup code needed for early 0.9.0
     uploads
   * debian/control: Bump Standards-Version to 4.5.0 (no further changes)
+  * Bump debhelper compatibility to 12, switch from dh_systemd_start to
+    dh_installsystemd
 
   [ Alper Nebi Yasak ]
   * Include less modules when appropriate. (Closes: #940014)
 
- -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 05:29:21 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Fri, 24 Jan 2020 05:35:35 +0100
 
 plymouth (0.9.4-1.1) unstable; urgency=medium
 
